Dark Mode fix : excerpt text

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -549,7 +549,7 @@ section.archive-post > a {
 }
 
 .archive-post a .index .excerpt {
-    color: rgba(0, 0, 0, 0.55);
+    color: var(--fg-post-color);
     font-size: 90%;
     position: relative;
     margin: 1rem 0 0;
